[package]
name = "Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ] }
